test/libyul/yulSyntaxTests/if_statement_fail_2.yul
{ if true:bool let x:u256 := 3:u256 }
// ====
// dialect: zvmTyped
// ----
// ParserError 2314: (15-18): Expected '{' but got reserved keyword 'let'
